trying to fix binary path

--- a/src/Mod/Fem/Gui/DlgSettingsFemCodeAster.ui
+++ b/src/Mod/Fem/Gui/DlgSettingsFemCodeAster.ui
@@ -102,7 +102,7 @@
            <cstring>codeasterBinaryPath</cstring>
           </property>
           <property name="prefPath" stdset="0">
-           <cstring>Mod/Fem/femsolver/codeaster</cstring>
+           <cstring>Mod/Fem/CodeAster</cstring>
           </property>
          </widget>
         </item>
@@ -125,7 +125,7 @@
            <cstring>writeCommentsToInputFile</cstring>
           </property>
           <property name="prefPath" stdset="0">
-           <cstring>Mod/Fem/femsolver/codeaster</cstring>
+           <cstring>Mod/Fem/CodeAster</cstring>
           </property>
          </widget>
         </item>
